--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "google-auth-library": "^9.14.2",
     "@trigger.dev/sdk": "^3.3.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
